<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/tv_questions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.057" />

        <Button
            android:id="@+id/btn_true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnTrue"
            app:layout_constraintBottom_toTopOf="@id/btn_prev"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_false" />

        <Button
            android:id="@+id/btn_false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnFalse"
            app:layout_constraintBottom_toBottomOf="@id/btn_true"
            app:layout_constraintEnd_toStartOf="@id/btn_true"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btn_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:drawableEnd="@drawable/ic_btn_forward"
            android:text="@string/btnNext"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/btn_true"
            app:layout_constraintStart_toStartOf="@+id/btn_true" />

        <Button
            android:id="@+id/btn_prev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_btn_back"
            android:text="@string/btnPrev"
            app:layout_constraintBottom_toBottomOf="@id/btn_next"
            app:layout_constraintEnd_toEndOf="@id/btn_false"
            app:layout_constraintStart_toStartOf="@id/btn_false" />

        <Button
            android:id="@+id/btn_cheat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnCheat"
            app:layout_constraintBottom_toTopOf="@id/btn_false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_point"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_questions" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>